@@ -1,6 +1,12 @@
-2005-11-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+2005-11-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Released avr-libc-1.4.0.
+
+2005-11-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	Submitted by Dmitry Xmelkov:
+	* libm/fplib/pow.S: reimplement.
+	Fixes bug #14852: fp pow function broken for negative x
 
 2005-11-15 Anatoly Sokolov <aesok@post.ru>
 
